syntax = "proto3";

package tokenplay;
option go_package = "proto/tokenplay";

service Tokenplay {
	rpc AddWord(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Request {
	string Word = 1;
}

message Response {
	string msg = 1;
}

message Message {
        string say = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
